export const snapshot = {};

snapshot[`global > GET /artists/remote > snapshot > should render page without query 1`] = `
'
<body>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
    <div class="container">
      <a
        class="navbar-brand"
        href="/"
      >
        Music Follower
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent"
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span class="navbar-toggler-icon">
        </span>
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
            <a
              class="nav-link "
              aria-current="page"
              href="/"
            >
              Home
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link active"
              href="/artists"
            >
              Artists
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link "
              href="/releases"
            >
              Releases
            </a>
          </li>
          <div
            class="modal fade"
            id="confirm-delete-account-modal"
            tabindex="-1"
          >
            <div class="modal-dialog">
              <div class="modal-content">
                <div class="modal-header">
                  <h5 class="modal-title">
                    Confirm delete account
                  </h5>
                  <button
                    type="button"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    aria-label="Close"
                  >
                  </button>
                </div>
                <div class="modal-body">
                  <p>
                    Are you sure you want to delet the current auth account?
                  </p>
                  <p>
                    You will be able to create a new one.
                  </p>
                </div>
                <div class="modal-footer">
                  <form
                    method="post"
                    action="/auth/delete"
                  >
                    <input
                      class="btn btn-outline-primary"
                      type="submit"
                      value="Confirm"
                    >
                  </form>
                  <button
                    type="button"
                    class="btn btn-outline-secondary"
                    data-bs-dismiss="modal"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
          <li
            class="nav-item"
            data-bs-toggle="modal"
            data-bs-target="#confirm-delete-account-modal"
          >
            <a
              class="nav-link"
              style="cursor:pointer"
            >
              Delete account?
            </a>
          </li>
          <li class="nav-item">
            <form
              method="post"
              action="/auth/logout"
            >
              <input
                type="submit"
                value="Logout"
                class="nav-link"
              >
            </form>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    id="flash-messages"
    class="position-fixed z-3 vstack gap-2 overflow-x-hidden overflow-y-scroll"
    style="bottom:1.3rem;right:1.3rem;width:600px;top:1.3rem;pointer-events:none"
  >
    <div
      class="alert alert-success alert-dismissible fade show mb-0 d-flex align-items-center"
      role="alert"
      style="pointer-events:all"
    >
      <i class="bi bi-check-square me-2">
      </i>
      Successfull login
      <button
        type="button"
        class="btn-close"
        data-bs-dismiss="alert"
        aria-label="Close"
      >
      </button>
    </div>
  </div>
  <main class="mt-5">
    <div class="container">
      <div class="row">
        <div class="col-md-6 offset-md-3">
          <form
            action="/artists/remote"
            method="get"
          >
            <div class="mb-3">
              <label
                for="q"
                class="form-label"
              >
                Artists name
              </label>
              <input
                class="form-control "
                type="text"
                id="q"
                name="q"
                placeholder="Artists name"
                required
                value
              >
            </div>
            <div class="d-grid">
              <button
                type="submit"
                class="btn btn-outline-primary"
              >
                Search
                <i class="bi bi-search">
                </i>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </main>
  <script
    type="module"
    src="/deps/bootstrap/dist/js/bootstrap.bundle.js"
  >
  </script>
</body>
'
`;

snapshot[`global > GET /artists/remote > snapshot > should render page with query 1`] = `
'
<body>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
    <div class="container">
      <a
        class="navbar-brand"
        href="/"
      >
        Music Follower
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent"
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span class="navbar-toggler-icon">
        </span>
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
            <a
              class="nav-link "
              aria-current="page"
              href="/"
            >
              Home
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link active"
              href="/artists"
            >
              Artists
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link "
              href="/releases"
            >
              Releases
            </a>
          </li>
          <div
            class="modal fade"
            id="confirm-delete-account-modal"
            tabindex="-1"
          >
            <div class="modal-dialog">
              <div class="modal-content">
                <div class="modal-header">
                  <h5 class="modal-title">
                    Confirm delete account
                  </h5>
                  <button
                    type="button"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    aria-label="Close"
                  >
                  </button>
                </div>
                <div class="modal-body">
                  <p>
                    Are you sure you want to delet the current auth account?
                  </p>
                  <p>
                    You will be able to create a new one.
                  </p>
                </div>
                <div class="modal-footer">
                  <form
                    method="post"
                    action="/auth/delete"
                  >
                    <input
                      class="btn btn-outline-primary"
                      type="submit"
                      value="Confirm"
                    >
                  </form>
                  <button
                    type="button"
                    class="btn btn-outline-secondary"
                    data-bs-dismiss="modal"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
          <li
            class="nav-item"
            data-bs-toggle="modal"
            data-bs-target="#confirm-delete-account-modal"
          >
            <a
              class="nav-link"
              style="cursor:pointer"
            >
              Delete account?
            </a>
          </li>
          <li class="nav-item">
            <form
              method="post"
              action="/auth/logout"
            >
              <input
                type="submit"
                value="Logout"
                class="nav-link"
              >
            </form>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    id="flash-messages"
    class="position-fixed z-3 vstack gap-2 overflow-x-hidden overflow-y-scroll"
    style="bottom:1.3rem;right:1.3rem;width:600px;top:1.3rem;pointer-events:none"
  >
    <div
      class="alert alert-success alert-dismissible fade show mb-0 d-flex align-items-center"
      role="alert"
      style="pointer-events:all"
    >
      <i class="bi bi-check-square me-2">
      </i>
      Successfull login
      <button
        type="button"
        class="btn-close"
        data-bs-dismiss="alert"
        aria-label="Close"
      >
      </button>
    </div>
  </div>
  <main class="mt-5">
    <div class="container">
      <div class="row">
        <div class="col-md-6 offset-md-3">
          <form
            action="/artists/remote"
            method="get"
          >
            <div class="mb-3">
              <label
                for="q"
                class="form-label"
              >
                Artists name
              </label>
              <input
                class="form-control "
                type="text"
                id="q"
                name="q"
                placeholder="Artists name"
                required
                value="foobar"
              >
            </div>
            <div class="d-grid">
              <button
                type="submit"
                class="btn btn-outline-primary"
              >
                Search
                <i class="bi bi-search">
                </i>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div class="container mt-5">
      <div class="row">
        <div class="col-12">
          <section class="mb-4 text-center text-sm-start d-block d-sm-flex">
            <img
              class="img-fluid rounded me-sm-5"
              src="https://256x256.com"
              style="aspect-ratio:1 / 1;max-height:256px"
            >
            <div>
              <h3 lass="mt-sm-0 mt-2">
                foo bar
              </h3>
              <form
                action="/artists/remote"
                method="post"
              >
                <input
                  type="hidden"
                  name="name"
                  value="foo bar"
                >
                <input
                  type="hidden"
                  name="id"
                  value="1"
                >
                <input
                  type="hidden"
                  name="image"
                  value="https://256x256.com"
                >
                <button
                  type="submit"
                  class="btn btn-outline-primary"
                >
                  Subscribe
                </button>
              </form>
            </div>
          </section>
        </div>
      </div>
    </div>
  </main>
  <script
    type="module"
    src="/deps/bootstrap/dist/js/bootstrap.bundle.js"
  >
  </script>
</body>
'
`;

snapshot[`global > GET /artists/remote > snapshot > should render page no results 1`] = `
'
<body>
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
    <div class="container">
      <a
        class="navbar-brand"
        href="/"
      >
        Music Follower
      </a>
      <button
        class="navbar-toggler"
        type="button"
        data-bs-toggle="collapse"
        data-bs-target="#navbarSupportedContent"
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
      >
        <span class="navbar-toggler-icon">
        </span>
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          <li class="nav-item">
            <a
              class="nav-link "
              aria-current="page"
              href="/"
            >
              Home
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link active"
              href="/artists"
            >
              Artists
            </a>
          </li>
          <li class="nav-item">
            <a
              class="nav-link "
              href="/releases"
            >
              Releases
            </a>
          </li>
          <div
            class="modal fade"
            id="confirm-delete-account-modal"
            tabindex="-1"
          >
            <div class="modal-dialog">
              <div class="modal-content">
                <div class="modal-header">
                  <h5 class="modal-title">
                    Confirm delete account
                  </h5>
                  <button
                    type="button"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    aria-label="Close"
                  >
                  </button>
                </div>
                <div class="modal-body">
                  <p>
                    Are you sure you want to delet the current auth account?
                  </p>
                  <p>
                    You will be able to create a new one.
                  </p>
                </div>
                <div class="modal-footer">
                  <form
                    method="post"
                    action="/auth/delete"
                  >
                    <input
                      class="btn btn-outline-primary"
                      type="submit"
                      value="Confirm"
                    >
                  </form>
                  <button
                    type="button"
                    class="btn btn-outline-secondary"
                    data-bs-dismiss="modal"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
          <li
            class="nav-item"
            data-bs-toggle="modal"
            data-bs-target="#confirm-delete-account-modal"
          >
            <a
              class="nav-link"
              style="cursor:pointer"
            >
              Delete account?
            </a>
          </li>
          <li class="nav-item">
            <form
              method="post"
              action="/auth/logout"
            >
              <input
                type="submit"
                value="Logout"
                class="nav-link"
              >
            </form>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    id="flash-messages"
    class="position-fixed z-3 vstack gap-2 overflow-x-hidden overflow-y-scroll"
    style="bottom:1.3rem;right:1.3rem;width:600px;top:1.3rem;pointer-events:none"
  >
    <div
      class="alert alert-success alert-dismissible fade show mb-0 d-flex align-items-center"
      role="alert"
      style="pointer-events:all"
    >
      <i class="bi bi-check-square me-2">
      </i>
      Successfull login
      <button
        type="button"
        class="btn-close"
        data-bs-dismiss="alert"
        aria-label="Close"
      >
      </button>
    </div>
  </div>
  <main class="mt-5">
    <div class="container">
      <div class="row">
        <div class="col-md-6 offset-md-3">
          <form
            action="/artists/remote"
            method="get"
          >
            <div class="mb-3">
              <label
                for="q"
                class="form-label"
              >
                Artists name
              </label>
              <input
                class="form-control "
                type="text"
                id="q"
                name="q"
                placeholder="Artists name"
                required
                value="foobar"
              >
            </div>
            <div class="d-grid">
              <button
                type="submit"
                class="btn btn-outline-primary"
              >
                Search
                <i class="bi bi-search">
                </i>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <p class="text-center mt-5">
      No remote artists found
    </p>
  </main>
  <script
    type="module"
    src="/deps/bootstrap/dist/js/bootstrap.bundle.js"
  >
  </script>
</body>
'
`;
